--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,22 @@
 attrs==21.4.0
+bidict==0.21.4
 click==8.0.4
 Flask==2.0.3
+Flask-SocketIO==5.1.1
+h11==0.13.0
 iniconfig==1.1.1
 itsdangerous==2.1.1
 Jinja2==3.0.3
-MarkupSafe==2.1.0
+MarkupSafe==2.1.1
 packaging==21.3
 pluggy==1.0.0
 py==1.11.0
 pyparsing==3.0.7
 pytest==7.1.0
+python-engineio==4.3.1
+python-socketio==5.5.2
+simple-websocket==0.5.1
 tomli==2.0.1
 Unidecode==1.3.4
 Werkzeug==2.0.3
+wsproto==1.1.0
